# txtc

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/inFilePath/: gibberish.cpp  gibberish.h
examples/outFilePath/: gibberish4.cpp.txt
examples/outFilePath/recursive folder/: gibberish2.h.txt
src/: main.cpp
